crates/plotnik-tests/tests/04-emit/bytecode/binding/negated_field_unknown.txt
Q = (function_declaration -nme) @fn
------------------ DIAGNOSTICS -------------------
error: `nme` is not a valid grammar field
 --> query.ptk:1:28
  |
1 | Q = (function_declaration -nme) @fn
  |                            ^^^
  |
help: did you mean `name`?
  |
1 | Q = (function_declaration -name) @fn
  |                             +
